<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav"
    app:startDestination="@id/honeFragment">

    <fragment
        android:id="@+id/honeFragment"
        android:name="com.yicao.calculationtest.HomeFragment"
        android:label="@string/nav_title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_honeFragment_to_questionFragment"
            app:destination="@id/questionFragment"
            app:enterAnim="@anim/slide_from_right"
            app:exitAnim="@anim/slide_to_left"
            app:popEnterAnim="@anim/slide_from_left"
            app:popExitAnim="@anim/slide_to_right" />
    </fragment>
    <fragment
        android:id="@+id/questionFragment"
        android:name="com.yicao.calculationtest.QuestionFragment"
        android:label="@string/nav_title_question"
        tools:layout="@layout/fragment_question" >
        <action
            android:id="@+id/action_questionFragment_to_winFragment"
            app:destination="@id/winFragment"
            app:enterAnim="@anim/slide_from_right"
            app:exitAnim="@anim/slide_to_left"
            app:popEnterAnim="@anim/slide_from_left"
            app:popExitAnim="@anim/slide_to_right" />
        <action
            android:id="@+id/action_questionFragment_to_loseFragment"
            app:destination="@id/loseFragment"
            app:enterAnim="@anim/slide_from_right"
            app:exitAnim="@anim/slide_to_left"
            app:popEnterAnim="@anim/slide_from_left"
            app:popExitAnim="@anim/slide_to_right" />
    </fragment>
    <fragment
        android:id="@+id/winFragment"
        android:name="com.yicao.calculationtest.WinFragment"
        android:label="@string/nav_title_win"
        tools:layout="@layout/fragment_win" >
        <action
            android:id="@+id/action_winFragment_to_honeFragment"
            app:destination="@id/honeFragment" />
    </fragment>
    <fragment
        android:id="@+id/loseFragment"
        android:name="com.yicao.calculationtest.LoseFragment"
        android:label="@string/nav_title_lose"
        tools:layout="@layout/fragment_lose" >
        <action
            android:id="@+id/action_loseFragment_to_honeFragment"
            app:destination="@id/honeFragment" />
    </fragment>
</navigation>